Added animations and implemented login page using local storage

--- a/Internet-Card-Website/index.html
+++ b/Internet-Card-Website/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Internet Card</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
@@ -19,7 +23,7 @@
             <a href="#">How it works</a>
           </div>
           <div class="links-part-two">
-            <a href="#">Login</a>
+            <a href="login.html">Login</a>
             <a href="#" class="get-the-card-btn">Get the card</a>
           </div>
         </div>
@@ -33,30 +37,51 @@
         <h2>Create.Share. <span class="green-color">Advance</span></h2>
         <div class="csa-cards-container">
           <div class="csa-card">
-            <img src="assets/manage-your-ecard.svg" alt="Manage your card" />
+            <img
+              class="csa-img"
+              src="assets/manage-your-ecard.svg"
+              alt="Manage your card"
+            />
             <h3>Manage your card</h3>
           </div>
           <div class="csa-card">
-            <img src="assets/Easilyshareable-icon.svg" alt="Easily Sharable" />
+            <img
+              class="csa-img"
+              src="assets/Easilyshareable-icon.svg"
+              alt="Easily Sharable"
+            />
             <h3>Easily Sharable</h3>
           </div>
           <div class="csa-card">
-            <img src="assets/Multiplethemes-icon.svg" alt="Multiple Themes" />
+            <img
+              class="csa-img"
+              src="assets/Multiplethemes-icon.svg"
+              alt="Multiple Themes"
+            />
             <h3>Multiple Themes</h3>
           </div>
           <div class="csa-card">
-            <img src="assets/Savecard-icon.svg" alt="Save Cards" />
+            <img
+              class="csa-img"
+              src="assets/Savecard-icon.svg"
+              alt="Save Cards"
+            />
             <h3>Save Cards</h3>
           </div>
           <div class="csa-card">
             <img
+              class="csa-img"
               src="assets/Pocketfriendlyui-icon.svg"
               alt="Pocket Friendly UI"
             />
             <h3>Pocket Friendly UI</h3>
           </div>
           <div class="csa-card">
-            <img src="assets/QRCodescanner-icon.svg" alt="QR Code Scanner" />
+            <img
+              class="csa-img"
+              src="assets/QRCodescanner-icon.svg"
+              alt="QR Code Scanner"
+            />
             <h3>QR Code Scanner</h3>
           </div>
         </div>
@@ -132,5 +157,8 @@
       </section>
     </footer>
     <!-- footer section ends here -->
+
+    <!-- custom javascript -->
+    <script src="scripts/script.js"></script>
   </body>
 </html>
